tests/examples/snapshots/fail/sorts/def_wrong_arg.fly.cvc4.snap
---
source: tests/test_examples.rs
description: "--expect-fail --all-solvers -- verify tests/examples/fail/sorts/def_wrong_arg.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
sort checking error:
error: could not unify s and bool
   ┌─ tests/examples/fail/sorts/def_wrong_arg.fly:10:1
   │
10 │ assert forall x:bool, y:s. f(x, y)
   │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


